# repattern

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  acinclude.m4  configure.ac
build-aux/: git-tar-name.txt
include/: .gitignore  repattern-net.h  repattern-strings-footer.h  repattern-strings-header.h  repattern-strings-internet.h  repattern.h
lib/: librepattern-api.c  librepattern-api.h  librepattern-re-internet.c  librepattern-re-internet.h  librepattern-re-net.c  librepattern-re-net.h  librepattern-re.c  librepattern-re.h  librepattern-version.c  librepattern-version.h  librepattern.sym
repattern.xcodeproj/: project.pbxproj
repattern.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/: repattern.c
